--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "doctrine/orm": "^2.20",
         "friendsofsymfony/rest-bundle": "^3.8",
         "lexik/jwt-authentication-bundle": "^2.18",
-        "nelmio/api-doc-bundle": "^4.33",
+        "nelmio/api-doc-bundle": "4.33",
         "overblog/graphql-bundle": "^1.6",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.0",
